subtitle more visible https://github.com/dickhardt/A2P3_HTML/issues/25

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -526,7 +526,8 @@ form {
 }
 
 .mainTitleText {
-	font-family: 'QuicksandBook';
+	font-family: 'Century Gothic';
+	font-size: 15px;
 }
 
 .buttonRemoveAgent,.buttonAddIOS,.buttonCreateCLI,.submitContinue,.submitCancel,.submitEnroll,.submit
